--- a/MyJanken/Base.lproj/Main.storyboard
+++ b/MyJanken/Base.lproj/Main.storyboard
@@ -1,24 +1,82 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MyJanken" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BVZ-s8-r6y">
+                                <rect key="frame" x="0.0" y="47" width="390" height="623"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sop-Fs-C5D">
+                                <rect key="frame" x="0.0" y="710" width="390" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="Rlo-yh-Mok"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="じゃんけんをする！">
+                                    <backgroundConfiguration key="background">
+                                        <color key="backgroundColor" systemColor="systemBlueColor"/>
+                                    </backgroundConfiguration>
+                                    <fontDescription key="titleFontDescription" type="system" pointSize="24"/>
+                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="shuffle:" destination="BYZ-38-t0r" eventType="touchUpInside" id="f86-VZ-RT0"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="これからじゃんけんをします！" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g00-ZH-OVH">
+                                <rect key="frame" x="0.0" y="670" width="390" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="Yoi-la-zOO"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" red="0.3529411764705882" green="0.94901960784313721" blue="0.77647058823529413" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="sop-Fs-C5D" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="3yC-Mh-gPI"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="BVZ-s8-r6y" secondAttribute="trailing" id="7kl-1q-gtP"/>
+                            <constraint firstItem="g00-ZH-OVH" firstAttribute="top" secondItem="BVZ-s8-r6y" secondAttribute="bottom" id="92m-ao-z1A"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="g00-ZH-OVH" secondAttribute="trailing" id="Aty-OX-HKy"/>
+                            <constraint firstItem="sop-Fs-C5D" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="HOy-DK-Nyv"/>
+                            <constraint firstItem="g00-ZH-OVH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="MOC-Cf-4oL"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="sop-Fs-C5D" secondAttribute="trailing" id="WUo-Qe-bqo"/>
+                            <constraint firstItem="sop-Fs-C5D" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="jMr-Xw-nbP"/>
+                            <constraint firstItem="sop-Fs-C5D" firstAttribute="top" secondItem="g00-ZH-OVH" secondAttribute="bottom" id="kQQ-b9-oAn"/>
+                            <constraint firstItem="sop-Fs-C5D" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="lqB-Ki-z1L"/>
+                            <constraint firstItem="BVZ-s8-r6y" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="mvL-ut-afr"/>
+                            <constraint firstItem="BVZ-s8-r6y" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="pEA-Ba-R6z"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="answerImageView" destination="BVZ-s8-r6y" id="mWL-7j-jP5"/>
+                        <outlet property="answerLabel" destination="g00-ZH-OVH" id="6xk-Lo-qJh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="60.869565217391312" y="105.80357142857143"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
